@@ -2,7 +2,7 @@ Package: mbie
 Type: Package
 Title: Miscellaneous functions and data used by New Zealand Ministry of Business, Innovation and Employment
 Version: 0.9.0
-Date: 2015-07-06
+Date: 2015-07-10
 Author: Peter Ellis
 Maintainer: Pete McMillen <pete.mcmillen@mbie.govt.nz>
 Depends: R (>= 2.15.2), stats, tcltk, ggplot2, grid, scales, proto, zoo
