@@ -2,6 +2,7 @@ mbie 0.9.0
 *  Modified by Pete McMillen 06/07/2015.
 *  Added the html line break command <br> to the wrap function.
 *  Updated examples dependent on plyr and reshape2 packages, to dplyr and tidyr
+*  Modified CAGR function to allow user-control of number of decimal places
 
 mbie 0.8.9
 *  Modified by  Antonia Milkop 30/1/2015.  Eric Wu peer reviewed
